# sandk-offroad

./: .gitignore  Cargo.toml  Dockerfile  PLANNING.md  README.md  TASK.md  package-lock.json  package.json
.git.bak/: COMMIT_EDITMSG  FETCH_HEAD  config  index
.git.bak/refs/heads/: main
.git.bak/refs/remotes/origin/: main
.git.bak/refs/tags/: v0.1.0  v1.0.0  v2.0.0
.github/workflows/: rust.yml
assets/shaders/: terrain.wgsl
assets/vehicles/: offroad_truck.vehicle.json
docs/: asset_management.md
sandk-offroad/: Cargo.toml
src/: lib.rs  main.rs
src/assets/: mod.rs
src/audio/: mod.rs
src/core/: mod.rs
src/game/: mod.rs  state.rs  states.rs  tests.rs  ui.rs
src/game/assets/: mod.rs  tests.rs
src/game/components/: player.rs  vehicle.rs
src/game/plugins/: asset_manager.rs  lighting.rs  mod.rs  weather.rs
src/game/plugins/camera/: mod.rs  tests.rs
src/game/plugins/lighting/: light_culling.rs  light_culling_node.rs  light_culling_pipeline.rs  light_culling_system.rs  mod.rs  point_light_shadows.rs  tests.rs  volumetric.rs  volumetric_pipeline.rs  volumetric_texture.rs
src/game/plugins/lighting/examples/: volumetric_demo.rs
src/game/plugins/lighting/shaders/: light_culling.wgsl  point_light_shadow.wgsl  volumetric.wgsl  volumetric_render.wgsl
src/game/plugins/lighting/tests/: test_light_culling.rs  test_light_culling_integration.rs  test_light_culling_pipeline.rs  test_point_light_shadow_shader.rs  test_point_light_shadows.rs
src/game/plugins/particle_system/: animation.rs  basic_particle.rs  buffer.rs  collision.rs  collision_plugin.rs  compute.rs  emitter.rs  gradient.rs  material.rs  mod.rs  particle.rs  particle_material.rs  plugin.rs  presets.rs  sorting.rs  special_effects.rs  tests.rs  texture_gen.rs  trail.rs  trail_material.rs  trail_mesh.rs  trail_plugin.rs
src/game/plugins/particle_system/examples/: README.md  advanced_features.rs  basic_particles.rs  mod.rs  specialized_effects.rs
src/game/plugins/particle_system/shaders/: particle.wgsl  particle_collision.wgsl  particle_material.wgsl  particle_render.wgsl  particle_sort.wgsl  particle_trail.wgsl  particle_update.wgsl  trail.wgsl
src/game/plugins/particle_system/tests/: collision_tests.rs  particle_material_tests.rs  trail_tests.rs
src/game/plugins/post_process/: bind_group.rs  effect_showcase.rs  mod.rs  node.rs  pipeline.rs  plugin.rs  post_process_pipeline.rs  profiling.rs  settings.rs  test_scene.rs  tests.rs  ui.rs  ui_controls.rs
src/game/plugins/post_process/shaders/: post_process.wgsl
src/game/plugins/tests/: asset_manager_tests.rs  test_lighting.rs
src/game/plugins/weather/: cloud_material.rs  cloud_system.rs  debug_state.rs  debug_ui.rs  environment_plugin.rs  mod.rs  noise_generator.rs  plugin.rs  profiler.rs  sky_system.rs  state.rs  tests.rs  time_manager.rs  time_of_day.rs  weather_effects.rs  weather_manager.rs  weather_system.rs
src/game/plugins/weather/examples/: cloud_demo.rs  weather_demo.rs
src/game/plugins/weather/shaders/: volumetric_clouds.wgsl
src/game/plugins/weather/tests/: performance_tests.rs  weather_effects_test.rs  weather_effects_tests.rs
src/game/resources/: game_state.rs  mod.rs
src/game/systems/: mod.rs
src/game/tests/: mod.rs
src/game/vehicle/: chassis.rs  mod.rs  suspension.rs  wheel.rs
src/game/vehicle/tests/: suspension_tests.rs
src/physics/: mod.rs
src/rendering/: mod.rs
src/terrain/: mod.rs  tests.rs
src/ui/: mod.rs
src/utils/: mod.rs
tests/: performance_tests.rs
