[package]
name = "sandk-offroad"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance offroad racing game built with Rust"

[dependencies]
# Game Engine
bevy = { version = "0.12", features = ["dynamic-linking"] }

# Physics
bevy_rapier3d = "0.24"

# Audio
bevy_kira_audio = "0.17"

# UI
bevy_egui = "0.23"

# Asset Management
bevy_asset_loader = "0.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"

# Math
glam = "0.24"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.13"

# Networking (for future multiplayer)
bevy_networking_turbulence = "0.3"

[dev-dependencies]
bevy-inspector-egui = "0.19"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1 