[package]
name = "sandk-offroad"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance offroad racing game built with Rust"

[lib]
name = "sandk_offroad"
path = "src/lib.rs"

[dependencies]
# Game Engine
bevy = { version = "0.11.3", features = ["dynamic_linking", "wayland"] }

# Physics
bevy_rapier3d = { version = "0.22.0", features = ["dim3", "debug-render"] }

# UI
bevy_egui = "0.21"

# Asset Management
bevy_asset_loader = "0.17"

# Serialization
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"

# Math
glam = "0.24"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.13"

# Additional dependencies
syn = { version = "1.0", features = ["full"] }
rand = "0.8"
noise = "0.8"

[dev-dependencies]
bevy-inspector-egui = "0.19"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1 