[package]
name = "sandk-offroad"
version = "0.1.0"
edition = "2021"
description = "An advanced off-road vehicle simulation game with realistic physics and graphics"
authors = ["SandK Development Team"]
repository = "https://github.com/sandk/offroad"
license = "MIT"

[workspace]
members = ["."]

[dependencies]
# Core game engine
bevy = { version = "0.12", features = ["bevy_pbr", "bevy_render", "bevy_asset", "bevy_core_pipeline", "dynamic_linking"] }

# Graphics and shaders
wgpu = "0.17"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.24"

# Physics
bevy_rapier3d = "0.22.0"
nalgebra = "0.32"

# Asset handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"

# Networking
tokio = { version = "1.32", features = ["full"] }
warp = "0.3"

# Logging and diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
# Development tools
bevy-inspector-egui = "0.21.0"
bevy_mod_debugdump = "0.8.0"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8.1"
mockall = "0.11"
test-case = "3.3"
rstest = "0.18"
pretty_assertions = "1.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[features]
default = ["graphics-high"]
graphics-low = []
graphics-medium = ["graphics-low"]
graphics-high = ["graphics-medium", "post-process-effects"]
post-process-effects = []

# Enable this feature for development with fast compilation
dev = ["bevy/dynamic_linking"]

# Enable this feature for shader hot-reloading
shader-hot-reload = []

[[bench]]
name = "performance_tests"
harness = false 